--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,5 +25,6 @@ jobs:
         run : |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install plotly==5.4.0
       - name: Run tests
         run: python3 test_interface.py
